--- a/2-data-viz-and-data-exploration.Rmd
+++ b/2-data-viz-and-data-exploration.Rmd
@@ -30,6 +30,12 @@ class: inverse, center, middle
 
 ---
 
+class: inverse, center, middle
+
+# *Big idea*: Visualizing data involves deciding what to represent (in what ways).
+
+--- 
+
 # Homebase
 
 *These will appear in every presentation throughout the day today*
@@ -59,6 +65,8 @@ https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/
 class: inverse, center, middle
 
 # ggplot2
+
+Based on the "grammar of graphics"
 
 ---
 
@@ -119,6 +127,12 @@ class: inverse, center, middle
 ---
 
 # Saving plots
+
+---
+
+class: inverse, center, middle
+
+# *Big idea*: Visualizing data involves deciding what to represent (in what ways).
 
 ---
 
