--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -12,28 +12,20 @@ library(here)
 ```
 # Homebase
 
-*These will appear in every presentation throughout the day today*
-
-**All materials here:**
-https://github.com/jrosen48/swu-data-sci
-
-**RStudio Cloud**
-[link]
-
-**Ask questions on Google Docs:**
-https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/edit
-
-**Ask questions in Zoom chat!**
+- This website: https://github.com/jrosen48/swu-data-sci
+- RStudio Cloud: https://rstudio.cloud/project/1421785
+- Ask questions on Google Docs: https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/edit
+- Ask questions in Zoom chat!
 
 # Slides
 
-- [1-setting-up.html](1-setting-up.html)
-- [2-data-vis-and-data-exploration.html](2-data-vis-and-data-exploration.html)
-- [3-modeling-and-preparing.html](3-modeling-and-preparing.html)
-- [4-text-analysis-and-beyond.html](4-text-analysis-and-beyond.html)
+- [1 - Setting upl](1-setting-up.html)
+- [2 - Data visualization and exploration](2-data-vis-and-data-exploration.html)
+- [3 - Modeling and preparing data](3-modeling-and-preparing.html)
+- [4 - Text analysis and beyond](4-text-analysis-and-beyond.html)
 
 # Contact
 
-* [@jrosenberg6432](https://twitter.com/jrosenberg6432)
+* [Twitter: jrosenberg6432](https://twitter.com/jrosenberg6432)
 * [jmrosenberg@utk.edu](mailto:jmrosenberg@utk.edu)
 * https://joshuamrosenberg.com
