--- a/demo-doc-2-data-viz-and-data-exploration.Rmd
+++ b/demo-doc-2-data-viz-and-data-exploration.Rmd
@@ -7,3 +7,78 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+Let's first load the {dataedu} package adn the {tidyverse} suite of packages.
+
+```{r}
+library(dataedu)
+library(tidyverse)
+```
+
+If you saw some messages, success!
+
+Here is the data set we will use:
+
+```{r}
+sci_mo_processed
+```
+
+# Demo doc (part 2): Try it out!
+
+`geom_jitter()` is exactly like geom_point, but with a small amount of x- and y-axis random noise added.
+
+```{r}
+ggplot(gss_cat, aes(x = age, y = tvhours)) +
+  geom_jitter()
+```
+
+**Try it out!**
+
+Can you add a line representing the linear relationship between the two varibles? Add another layer using a `geom_` function.
+
+
+```{r}
+# hint: check out how a line was added in the presentation? 
+
+ggplot(gss_cat, aes(x = age, y = tvhours)) +
+  geom_jitter() +
+  geom_
+```
+
+Let's try a different theme.
+
+```{r}
+ggplot(gss_cat, aes(x = age, y = tvhours)) +
+  geom_jitter() +
+  theme_bw()
+```
+
+**Try it out!**
+
+Can you add a different theme? Start typing `theme_` and see what shows up! Be sure to run the code to see the results!
+
+```{r}
+ggplot(gss_cat, aes(x = age, y = tvhours)) +
+  geom_jitter() +
+  theme_
+```
+
+Does the relationship look to be different by year?
+
+```{r}
+ggplot(gss_cat, aes(x = age, y = tvhours)) +
+  geom_jitter() +
+  facet_wrap(~year)
+```
+
+**Try it out!**
+
+Can you add lines of best fit to the above plots?
+
+```{r}
+ggplot(gss_cat, aes(x = age, y = tvhours)) +
+  geom_jitter() +
+  geom_
+  facet_wrap(~year)
+```
+
+# End of part 2!
