--- a/demo-doc-1-setting-up.Rmd
+++ b/demo-doc-1-setting-up.Rmd
@@ -12,6 +12,8 @@ Let's first load the {dataedu} package adn the {tidyverse} suite of packages.
 ```{r}
 library(dataedu)
 library(tidyverse)
+
+print("It worked!")
 ```
 
 If you saw some messages, success!
@@ -21,8 +23,6 @@ Here is the data set we will use:
 ```{r}
 sci_mo_processed
 ```
-
-# Demo doc (part 1): Try it out!
 
 # Select
 
@@ -60,46 +60,25 @@ Be sure to run the result to see whether it did what you think it should do!
 
 ```{r}
 gss_cat %>% 
-  
+  filter()
 ```
 
-# Mutate
-
-Let's create a new variable for those 60 years of age or older.
+# Creating a plot
 
 ```{r}
-gss_cat %>% 
-  mutate(potential_senior = if_else(age >= 63.5, 1, 0),
-         super_senior = if_else(potential_senior == 1 & tvhours < 2, 1, 0)) %>% 
-  count(potential_senior, super_senior)
-```
 
-Let's save the results back to `gss_cat` and make sure that it worked.
-
-```{r}
-gss_cat <- gss_cat %>% 
-  mutate(potential_senior = ifelse(age >= 63.5, TRUE, FALSE))
-```
-
-Adding another variable for folks who are middle-aged.
-
-```{r}
-gss_cat <- gss_cat %>% 
-  mutate(middle_aged = ifelse(age >= 30 & age <= 40, "yes", "no"))
 ```
 
 **Try it out!**
 
-Can you create a new variable based upon either the *year* or *tvhours* variable using `if_else()`? 
-
 ```{r}
-gss_cat %>% 
-  mutate()
+
 ```
 
-Then, save the results back to `gss_cat` (check out the code two chunks above for an example!).
+---
 
-```{r}
-gss_cat %>% 
-  mutate()
-```
+Good work! Now:
+
+- change the name at the very top of this document
+- click "Knit"
+- check out the result!
