--- a/2-data-viz-and-data-exploration.Rmd
+++ b/2-data-viz-and-data-exploration.Rmd
@@ -44,7 +44,7 @@ class: inverse, center, middle
 https://github.com/jrosen48/swu-data-sci
 
 **RStudio Cloud**
-[link]
+https://rstudio.cloud/project/1421785
 
 **Ask questions on Google Docs:**
 https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/edit
@@ -64,69 +64,21 @@ https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/
 
 class: inverse, center, middle
 
-# ggplot2
+# Try it out! ggplot2 
 
-Based on the "grammar of graphics"
+*Let's hop over to the demo doc for part 2!*
 
----
-
-# Bar chart
-
----
-
-# Scatterplot
-
-
+- An introduction to ggplot2
+- Exploring data
+- Beyond the basics
 
 ---
 
-# Adding a line of best fit
+# *Discuss in groups!*
 
----
-
-class: inverse, center, middle
-
-# Exploring data
-
----
-
-# Printing
-
-
----
-
-# Viewing data
-
-
----
-
-# Counting
-
-
----
-class: inverse, center, middle
-
-# Beyond the basics of ggplot2
-
----
-
-# Colors
-
----
-
-# Filtering
-
----
-
-# Selecting
-
----
-
-# Theming
-
----
-
-# Saving plots
+- What challenges did you face?
+- What successes did you face?
+- What questions do you still have?
 
 ---
 
