--- a/4-text-analysis-and-beyond.Rmd
+++ b/4-text-analysis-and-beyond.Rmd
@@ -44,20 +44,12 @@ class: inverse, center, middle
 https://github.com/jrosen48/swu-data-sci
 
 **RStudio Cloud**
-[link]
+https://rstudio.cloud/project/1421785
 
 **Ask questions on Google Docs:**
 https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/edit
 
 **Ask questions in Zoom chat!**
-
----
-
-class: inverse, center, middle
-
-# But first!
-
-
 
 ---
 
@@ -70,30 +62,13 @@ class: inverse, center, middle
 
 ---
 
-class: inverse, center, middle
+# Text analysi
 
-# Text analysis with quanteda
+*Let's hop over to the demo doc for part 3!*
 
----
-
-# Term frequencies
-
----
-
-# Sentiment analysis
-
----
-
-# Plots
-
----
-
-class: inverse, center, middle
-
-# Doing more with data science
----
-
-# Installing packages
+- text analysis
+- 
+- 
 
 ---
 
@@ -129,6 +104,21 @@ class: inverse, center, middle
 
 ---
 
+# *Discuss in groups!*
+
+- What challenges did you face?
+- What successes did you face?
+- What questions do you still have?
+
+---
+
+class: inverse, center, middle
+
+# *Big idea*: Data science methods can assist and enhance your work with data.
+
+---
+
+
 # Post-survey
 
 (takes around five minutes)
@@ -141,19 +131,7 @@ class: inverse, center, middle
 
 # Thank you and contact!
 
----
-
-class: inverse, center, middle
-
-# *Big idea*: Data science methods can assist and enhance your work with data.
-
----
-
-# Contact
-
 * Contact: 
   * @jrosenberg6432
   * jmrosenberg@utk.edu
   * https://joshuamrosenberg.com
-
----
