--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -10,12 +10,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library(here)
 ```
+
 # Homebase
 
-- This website: https://github.com/jrosen48/swu-data-sci
-- RStudio Cloud: https://rstudio.cloud/project/1421785
+- This website: https://jrosen48.github.io/swu-data-sci/
+- RStudio Cloud (with links to the *demo docs*: https://rstudio.cloud/project/1421785
+- Repository with all files: https://github.com/jrosen48/swu-data-sci
+
+# Need help? Reach out!
+
 - Ask questions on Google Docs: https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/edit
 - Ask questions in Zoom chat!
+- Contact
+  * [Twitter: jrosenberg6432](https://twitter.com/jrosenberg6432)
+  * [jmrosenberg@utk.edu](mailto:jmrosenberg@utk.edu)
 
 # Slides
 
@@ -24,8 +32,4 @@ library(here)
 - [3 - Modeling and preparing data](3-modeling-and-preparing.html)
 - [4 - Text analysis and beyond](4-text-analysis-and-beyond.html)
 
-# Contact
 
-* [Twitter: jrosenberg6432](https://twitter.com/jrosenberg6432)
-* [jmrosenberg@utk.edu](mailto:jmrosenberg@utk.edu)
-* https://joshuamrosenberg.com
