--- a/docs/1-setting-up.Rmd
+++ b/docs/1-setting-up.Rmd
@@ -53,7 +53,8 @@ class: inverse, center, middle
 ]
 
 ```{r, out.width = "400px", echo = FALSE, fig.align = "center"}
-include_graphics("img/jr-joro.jpg")
+library(here)
+include_graphics(here("img", "jr-joro.jpg"))
 ```
 
 ---
@@ -110,7 +111,7 @@ You'll be involved in the process of building new capabilities (and knowledge an
 
 ---
 
-# Over-arching design of today's session
+# Over-arching design
 
 The pedagogical framework *plays out* in the following specific ways:
 
@@ -143,14 +144,16 @@ We choose things that we are *confident* that we can do well and that are *valua
 
 We do these in a sociocultural *context*: our sense of belonging impacts what we choose to do
 
-## An argument about RMarkdown
+---
+
+# An argument about RMarkdown
 
 - This presentation will make the argument that **you can use R and RStudio to solve
 problems that are important to you**
 
 - In doing so, you can **participate in a cool community of data scientists in education**
 
---- 
+---
 
 # Why learn R?
 
@@ -158,6 +161,8 @@ problems that are important to you**
 * It is able to work with data small (*n* = 30) and large (*n* = 100,000+) efficiently
 * It is a programming language and so is quite flexible
 * There is a great, inclusive community of users and developers (and teachers)
+* It is increasingly used in education
+* It can help you to carry out your educational analyses in open and trustworthy ways
 * It is cross-platform, open-source, and freely-available
 
 ---
@@ -167,8 +172,9 @@ class: inverse, center, middle
 
 # Where You'll Be Running R
 
-- RStudio Cloud (preferred)
-- R and RStudio on your computer
+RStudio Cloud (preferred)  
+OR  
+R and RStudio on your computer  
 
 ---
 
