--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -14,22 +14,21 @@ library(here)
 # Homebase
 
 - This website: https://jrosen48.github.io/swu-data-sci/
-- RStudio Cloud (with links to the *demo docs*: https://rstudio.cloud/project/1421785
-- Repository with all files: https://github.com/jrosen48/swu-data-sci
+- RStudio Cloud (with links to the *demo docs*): https://rstudio.cloud/project/1421785
+- Repository with all files for today's workshop: https://github.com/jrosen48/swu-data-sci
 
-# Need help? Reach out!
+# Need help?
 
 - Ask questions on Google Docs: https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/edit
-- Ask questions in Zoom chat!
-- Contact
+- Contact me:
   * [Twitter: jrosenberg6432](https://twitter.com/jrosenberg6432)
   * [jmrosenberg@utk.edu](mailto:jmrosenberg@utk.edu)
+- Ask questions in Zoom chat!
+- Please reach out *with anything at all*! Learning R is hard at first.
 
 # Slides
 
-- [1 - Setting upl](1-setting-up.html)
+- [1 - Setting up](1-setting-up.html)
 - [2 - Data visualization and exploration](2-data-vis-and-data-exploration.html)
 - [3 - Modeling and preparing data](3-modeling-and-preparing.html)
 - [4 - Text analysis and beyond](4-text-analysis-and-beyond.html)
-
-
