--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -14,7 +14,12 @@ library(here)
 # Homebase
 
 - This website: https://jrosen48.github.io/swu-data-sci/
-- RStudio Cloud (with links to the *demo docs*): https://rstudio.cloud/project/1421785
+- RStudio Cloud (with links to the *demo docs*): 
+  - Part 1: https://rstudio.cloud/project/1421785
+  - Part 2:
+  - Part 3: 
+  - Part 4: 
+  
 - Repository with all files for today's workshop: https://github.com/jrosen48/swu-data-sci
 
 # Need help?
