--- a/docs/1-setting-up.Rmd
+++ b/docs/1-setting-up.Rmd
@@ -50,6 +50,8 @@ class: inverse, center, middle
   * Science education
   * Data science (for) education
   * Data science in education
+* Former HS science teacher
+* Presently PI or Co-PI for three NSF grants
 ]
 
 ```{r, out.width = "400px", echo = FALSE, fig.align = "center"}
@@ -192,7 +194,9 @@ R and RStudio on your computer
 
 # RStudio Cloud
 
-**[This link will take you to the RStudio Cloud project for this workshop](https://rstudio.cloud/project/964811).**
+**[This link will take you to the RStudio Cloud project for this part of the session](https://rstudio.cloud/project/964811).**
+
+Link also here: https://rstudio.cloud/project/964811
 
 Once you have navigated to this webpage, log in using a Google or GitHub account. Then, create a permanent copy of the project in your own workspace (see the prompt at the top of the page guiding you to do this).
 
@@ -317,7 +321,7 @@ Now, we'll render to a PDF.
 
 class: inverse, center, middle
 
-# *Discuss in groups!*
+# *Discuss in groups! (five minutes in groups, five minutes together)*
 
 - What challenges did you face?
 - What successes did you face?
