--- a/docs/2-data-viz-and-data-exploration.Rmd
+++ b/docs/2-data-viz-and-data-exploration.Rmd
@@ -15,6 +15,7 @@ output:
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
+knitr::opts_chunk$set(comment=NA, warning = FALSE, message = FALSE, fig.width=5, fig.height=5)
 
 library(knitr)
 library(tidyverse)
@@ -24,9 +25,11 @@ library(dataedu)
 joro_years <- round(as.numeric(difftime(as.Date(Sys.Date()), Sys.getenv("joro_bday"), unit="weeks"))/52.25, 1)
 ```
 
+
 class: inverse, center, middle
 
 # Welcome back!
+
 
 ---
 
@@ -34,7 +37,9 @@ class: inverse, center, middle
 
 # *Big idea*: Visualizing data involves deciding what to represent (in what ways).
 
---- 
+---
+
+
 
 # Homebase
 
@@ -62,19 +67,74 @@ https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/
 
 ---
 
+# ggplot2
+
+- based on the "grammar of graphics"
+- a popular R package (ggplot2)
+- flexible and fun to use
+- requires you to think about what you what to visualize in what ways
+
+---
+
+# Example ggplot2 plot
+
+```{r}
+sci_mo_processed %>% 
+  ggplot(aes(x = percentage_earned, y = TimeSpent)) +
+  geom_point()
+```
+
+---
+
+# Example ggplot2 plot
+
+```{r}
+sci_mo_processed %>% 
+  ggplot(aes(x = percentage_earned, y = TimeSpent)) +
+  geom_point() +
+  geom_smooth(method = "lm")
+```
+
+---
+
+# Example ggplot2 plot
+
+```{r}
+sci_mo_processed %>% 
+  ggplot(aes(x = percentage_earned, y = TimeSpent)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  theme_bw()
+```
+
+---
+
+# Example ggplot2 plot
+
+```{r}
+sci_mo_processed %>% 
+  ggplot(aes(x = percentage_earned, y = TimeSpent)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  theme_bw() +
+  facet_wrap(~subject)
+```
+
+---
+
 class: inverse, center, middle
 
 # Try it out! ggplot2 
 
 *Let's hop over to the demo doc for part 2!*
 
-- An introduction to ggplot2
-- Exploring data
-- Beyond the basics
+An introduction to ggplot2  
+Exploring data  
+Beyond the basics  
 
 ---
 
-# *Discuss in groups!*
+# *Discuss in groups! (five minutes in groups, five minutes together)*
 
 - What challenges did you face?
 - What successes did you face?
