--- a/demo-doc-2-data-viz-and-data-exploration.Rmd
+++ b/demo-doc-2-data-viz-and-data-exploration.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "1-setting-up-demo-doc"
+author: ""
 output: pdf_document
 ---
 
@@ -14,11 +15,10 @@ Let's first load the {dataedu} package and the {tidyverse} suite of packages.
 ```{r}
 library(dataedu)
 library(tidyverse)
+library(ggthemes)
 ```
 
-If you saw some messages, success!
-
-Here is the data set we will use:
+Here is the data set we will use (again):
 
 ```{r}
 sci_mo_processed
@@ -28,130 +28,200 @@ sci_mo_processed
 
 ## Bar chart
 
-```{r}
+Let's start by counting the number of students in each course.
 
+```{r}
+sci_mo_processed %>% 
+  count(course_id)
 ```
+So far, so good. But, how can we visualize these? Let's try a bar chart:
+
+```{r}
+sci_mo_processed %>% 
+  count(course_id) %>% 
+  ggplot(aes(x = course_id, y = n)) +
+  geom_col()
+```
+Well, that worked - sort of! How can we improve this plot? We'll do two things:
+
+- Flip the coordinates, so we can read the labels more easily
+- Arrange the bars (columns) by the number of students in each course
+
+```{r}
+sci_mo_processed %>% 
+  count(course_id) %>% 
+  ggplot(aes(x = reorder(course_id, n), y = n)) +
+  geom_col() +
+  coord_flip()
+```
+
+Let's color the bars by subject to see if patterns in course size can be identified.
+
+```{r}
+sci_mo_processed %>% 
+  count(course_id, subject) %>% 
+  ggplot(aes(x = reorder(course_id, n), y = n, fill = subject)) +
+  geom_col() +
+  coord_flip()
+```
+
+**Try it out!**
+
+Instead of course_id, can you visualize another variable? Try to replace course_id below with subject.
+
+```{r}
+sci_mo_processed %>% 
+  count(course_id) %>% 
+  ggplot(aes(x = course_id, y = n)) +
+  geom_col()
+```
+Can you reorder the bars (columns) above, using the same reordering we used in the first plot?
 
 ## Scatterplot
 
-```{r}
+Let's start with the plot we looked at earlier:
 
+```{r}
+sci_mo_processed %>% 
+  ggplot(aes(x = percentage_earned, y = TimeSpent)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  theme_bw() +
+  facet_wrap(~subject)
 ```
 
-#3 Adding a line of best fit
+** Try it out!**
+
+What if we wanted a different theme?
+
+Replace theme_bw() with one of the following:
+
+- theme_tufte()
+- theme_clean()
+- theme_fivethirtyeight()
 
 ```{r}
-
+sci_mo_processed %>% 
+  ggplot(aes(x = percentage_earned, y = TimeSpent)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  theme_bw() +
+  facet_wrap(~subject)
 ```
 
 # Exploring data
 
+Let's back up and spend a bit of time exploring data.
+
 ## Printing
 
 ```{r}
-
+sci_mo_processed
 ```
 
 ## Viewing data
 
-```{r}
+We can also use the View() function to view the data in a spreadsheet-like way:
 
+```{r, eval = FALSE}
+View(sci_mo_processed)
 ```
 
 ## Counting
 
-```{r}
+Counting is a surprisingly useful data analysis technique. Let's start with 
+counting one variable:
 
+```{r}
+sci_mo_processed %>% 
+  count(student_id)
+```
+What do you notice? What do you wonder?
+
+**Try it out!**
+
+Replace student_id with Gradebook_Item, and then run the code below:
+
+```{r}
+sci_mo_processed %>% 
+  count(student_id)
 ```
 
 # Beyond the basics of ggplot2
 
 ## Colors
 
-```{r}
+Colors can easily be changed; here are some options: http://www.stat.columbia.edu/~tzheng/files/Rcolor.pdf
 
+```{r}
+sci_mo_processed %>% 
+  count(course_id) %>% 
+  ggplot(aes(x = reorder(course_id, n), y = n)) +
+  geom_col(fill = "darkslateblue") +
+  coord_flip()
 ```
 
-# Theming
+**Try it out!**
+
+Can you replace darkslateblue with a different color?
 
 ```{r}
-
+sci_mo_processed %>% 
+  count(course_id) %>% 
+  ggplot(aes(x = reorder(course_id, n), y = n)) +
+  geom_col(fill = "darkslateblue") +
+  coord_flip()
 ```
 
 # Saving plots
 
-```{r}
+**Try it out!**
 
+Plots can be saved easily; by default, this function will save your last plot
+
+```{r}
+ggsave("my-courses-plot.png", width = 6, height = 4)
 ```
+
+# Rendering this document to a PDF report 
+
+- add your name as the author at the very top of this document
+- click "Knit" and check out the result!
 
 # Creating a GIF (leap)
 
-```{r}
+```{r, eval = FALSE}
+library(gganimate)
 
+sci_mo_processed %>% 
+  ggplot(aes(x = percentage_earned, y = TimeSpent)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  theme_bw() +
+  transition_states(subject) +
+  labs(title = 'Subject: {subject}')
 ```
 
+You can save this with:
 
-
-
-
-
-
-# Demo doc (part 2): Try it out!
-
-`geom_jitter()` is exactly like geom_point, but with a small amount of x- and y-axis random noise added.
-
-```{r}
-ggplot(gss_cat, aes(x = age, y = tvhours)) +
-  geom_jitter()
+```{r, eval = FALSE}
+anim_save("mygif.gif", width = 500, height = 500)
 ```
 
-**Try it out!**
+For what other variables could you "animate" a plot? Try replacing subject below.
 
-Can you add a line representing the linear relationship between the two varibles? Add another layer using a `geom_` function.
+```{r, eval = FALSE}
+library(gganimate)
 
-
-```{r}
-# hint: check out how a line was added in the presentation? 
-
-ggplot(gss_cat, aes(x = age, y = tvhours)) +
-  geom_jitter() +
-  geom_
+sci_mo_processed %>% 
+  ggplot(aes(x = percentage_earned, y = TimeSpent)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  theme_bw() +
+  transition_states(subject) +
+  labs(title = 'Subject: {subject}')
 ```
 
-Let's try a different theme.
-
-```{r}
-ggplot(gss_cat, aes(x = age, y = tvhours)) +
-  geom_jitter() +
-  theme_bw()
+```{r, eval = FALSE}
+anim_save("mysecondgif.gif", width = 500, height = 500)
 ```
-
-**Try it out!**
-
-Can you add a different theme? Start typing `theme_` and see what shows up! Be sure to run the code to see the results!
-
-```{r}
-ggplot(gss_cat, aes(x = age, y = tvhours)) +
-  geom_jitter() +
-  theme_
-```
-
-Does the relationship look to be different by year?
-
-```{r}
-ggplot(gss_cat, aes(x = age, y = tvhours)) +
-  geom_jitter() +
-  facet_wrap(~year)
-```
-
-**Try it out!**
-
-Can you add lines of best fit to the above plots?
-
-```{r}
-ggplot(gss_cat, aes(x = age, y = tvhours)) +
-  geom_jitter() +
-  geom_
-  facet_wrap(~year)
-```
-
